# ClinicalTransformer

./: .buildinfo  .dockerignore  .gitignore  Dockerfile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
_modules/: index.html
_sources/: index.rst.txt
clinical_transformer/: __init__.py
dbert/: build-dataset.html  configuration.html  inference.html  overview.html  release-model.html  training.html
docs/: conf.py  index.rst
environments/: README.md  requirements.txt
getting-started/: installation.html
mbert/: build-dataset.html  configuration.html  inference.html  overview.html  release-model.html  training.html
models/: modernbert-109m.html  nbert-80m.html  rnbert-96m.html  vnbert-96m.html
reference/: troubleshooting.html
source/: clinical_transformer.html  clinical_transformer.pt.datasets.dataloader.html  clinical_transformer.pt.datasets.html  clinical_transformer.pt.datasets.preprocessor.html  clinical_transformer.pt.html  clinical_transformer.pt.losses.contrastive.html  clinical_transformer.pt.losses.html  clinical_transformer.pt.losses.survival.html  clinical_transformer.pt.losses.vae.html  clinical_transformer.pt.models.html  clinical_transformer.pt.tokenizer.html  clinical_transformer.pt.training.BERT.html  clinical_transformer.pt.training.ClinicalTransformerMIL.html  clinical_transformer.pt.training.GPT.html  clinical_transformer.pt.training.TextMBERT.html  clinical_transformer.pt.training.html  modules.html  setup.html  (+5 more)
(+217 files in other folders)
