[project]
name = "clinical-transformer"
version = "1.0.5"
description = "Foundation models for clinical, genomic, and tabular data"
authors = [{ name = "Gustavo Arango" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
    "transformers>=4.40",
    "lightning>=2.5",
    "deepspeed>=0.16",
    "anndata>=0.10",
    "scipy>=1.12",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
fa2 = [
    "flash-attn>=2.5",
]
analysis = [
    "seaborn>=0.13",
    "lifelines>=0.30",
    "statsmodels>=0.14",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clinical_transformer"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
